// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`List block transforms to Columns block 1`] = `
"<!-- fin:columns -->
<div class="fin-block-columns"><!-- fin:column {"width":"100%"} -->
<div class="fin-block-column" style="flex-basis:100%"><!-- fin:list -->
<ul class="fin-block-list"><!-- fin:list-item -->
<li>First Item</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Second Item</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Third Item</li>
<!-- /fin:list-item --></ul>
<!-- /fin:list --></div>
<!-- /fin:column --></div>
<!-- /fin:columns -->"
`;

exports[`List block transforms to Group block 1`] = `
"<!-- fin:group {"layout":{"type":"constrained"}} -->
<div class="fin-block-group"><!-- fin:list -->
<ul class="fin-block-list"><!-- fin:list-item -->
<li>First Item</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Second Item</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Third Item</li>
<!-- /fin:list-item --></ul>
<!-- /fin:list --></div>
<!-- /fin:group -->"
`;

exports[`List block transforms to Heading block 1`] = `
"<!-- fin:heading -->
<h2 class="fin-block-heading">First Item</h2>
<!-- /fin:heading -->

<!-- fin:heading -->
<h2 class="fin-block-heading">Second Item</h2>
<!-- /fin:heading -->

<!-- fin:heading -->
<h2 class="fin-block-heading">Third Item</h2>
<!-- /fin:heading -->"
`;

exports[`List block transforms to Paragraph block 1`] = `
"<!-- fin:paragraph -->
<p>First Item</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph -->
<p>Second Item</p>
<!-- /fin:paragraph -->

<!-- fin:paragraph -->
<p>Third Item</p>
<!-- /fin:paragraph -->"
`;

exports[`List block transforms to Quote block 1`] = `
"<!-- fin:quote -->
<blockquote class="fin-block-quote"><!-- fin:list -->
<ul class="fin-block-list"><!-- fin:list-item -->
<li>First Item</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Second Item</li>
<!-- /fin:list-item -->

<!-- fin:list-item -->
<li>Third Item</li>
<!-- /fin:list-item --></ul>
<!-- /fin:list --></blockquote>
<!-- /fin:quote -->"
`;
